# bags-studio

./: .env.example  .gitignore  .vercelignore  Anchor.toml  README.md  package-lock.json  package.json  playwright.config.ts  supabase-schema.sql  tsconfig.json  tsconfig.test.json  vercel.json
app/: globals.css  layout.tsx  page.tsx
app/components/: Footer.tsx
app/studio/: layout.tsx  page.tsx
components/studio/: ActivityFeed.tsx  AppsMarketplace.tsx  AuthStatus.tsx  CampaignBuilder.tsx  ClaimReward.tsx  ClaimableCard.tsx  CoinSelector.tsx  ConvictionLeaderboard.tsx  CreatorLockBadge.tsx  DashboardHeader.tsx  EligibilityTable.tsx  EngagementLeaderboard.tsx  LaunchWizard.tsx  (+13 more)
docs/: BRAND.md  LANDING_PAGE_COPY.md  PRD.md  README.md  UI_STYLE_GUIDE.md  api-mapping.md  idea.md  mvp.md
landing/: package-lock.json  package.json
lib/: auth-session.ts  auth-types.ts  auth.ts  bags-api.ts  constants.ts  conviction.ts  merkle-tree.ts  resolve-role.ts  reward-program.ts  score-cache.ts  theme-context.tsx  types.ts  use-token-role.ts  validation.ts  verify-ownership.ts
programs/reward-vault/: Cargo.toml
programs/reward-vault/src/: error.rs  lib.rs  merkle_proof.rs  state.rs
programs/reward-vault/src/instructions/: claim.rs  close_claim_status.rs  close_stake_position.rs  create_lock.rs  extend_lock.rs  initialize_stake_pool.rs  initialize_vault.rs  mod.rs  open_stake_position.rs  release_lock.rs  stake.rs  unstake.rs  update_distribution.rs
scripts/: take-screenshots.js
supabase/: config.toml  full-schema.sql
tests/: api.spec.ts  reward-vault.ts  ui.spec.ts
(+60 files in other folders)
