[package]
name = "reward-vault"
version = "0.1.0"
description = "BagsStudio reward vault — trustless SOL distribution via merkle proofs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "reward_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

[profile.release]
overflow-checks = true
